<resources>
    <string name="app_name">Wallpapers</string>

    <string name="unit_id" translatable="false">ca-app-pub-4765070079723849/1665386996</string>
    <string name="unit_id2" translatable="false">ca-app-pub-4765070079723849/6407373942</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ahmet w mandil</string>
    <string name="nav_header_subtitle">ahmedwasfe84@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="not_signed_in">Oops! You have to Sign In first...</string>
    <string name="not_internet_connection">Oops! please make sure that you are connected to the internt and try again</string>
    <string name="favorite_empty">Oops! Your favorite menu is empty</string>
    <string name="recents_empty">Oops! Your recents menu is empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">238176580369312</string>
    <string name="facebook_login_protocol_schema">fb238176580369312</string>

    <string name="browser">Browser...</string>
    <string name="upload">Upload</string>

    <string name="log_out">Log Out</string>


    <string name="categores">Categores</string>
    <string name="recents">Recently</string>
    <string name="trending">Trending</string>

    <string name="internet_connection">Internet Connection</string>
    <string name="no_internet_connection">No Connection</string>

    <string name="welcome_user">Welcome</string>
    <string name="Choose_category">Please Choose Category</string>
    <string name="success_uploaded">Success Uploaded</string>
    <string name="please_wait">Please Wait....</string>
    <string name="share_successfull">Share Successfull</string>
    <string name="share_cancelled">Share Cancelled</string>
    <string name="accept_permission">You need accept this permission to download image</string>
    <string name="set_wallpaper">Set Wallpaper to Your phone</string>
    <string name="download_success">Download Success</string>

    <string name="share">Share</string>
    <string name="share_facebook">Share to Facebook</string>
    <string name="set_wallpaper2">Set Wallpaper</string>
    <string name="download">Download</string>
    <string name="night_mode">Night Mode   </string>
    <string name="favorite">Favorite</string>
    <string name="app_style">Style Application</string>
    <string name="help">Help</string>
    <string name="share_app">Share Application</string>
    <string name="about_app">About application</string>
    <string name="clear_recent">Clear Recents</string>
    <string name="clear_favorite">Clear Favorite</string>

    <string name="help_info1">can you share images when internt connection</string>
    <string name="help_info2">Can you contacted to suggestion and support by email</string>

    <string name="messageWlecome">Welcome to application Live Wallpapers</string>
    <string name="messageHelp">How can help you can you write your Suggested here and Thank you</string>
    <string name="try_again">Try again</string>


</resources>
