<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".UI.ViewWallpaper">


            <!--
                android:fitsSystemWindows="true"
                app:expandedTitleTextAppearance="@android:color/transparent"
            -->



            <ImageView
                android:id="@+id/image_thumb_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/bg"
                android:contentDescription="Wallpaper"/>


    <!--#DA4336 / #E75043-->

    <com.github.clans.fab.FloatingActionMenu
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu_fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="#ffffff"
        fab:menu_colorPressed="#ffffff"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/ic_add_white_24dp"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="@color/colorWhite"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_fab_label="">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border"
            fab:fab_size="mini"
            fab:fab_label="@string/favorite" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/share" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_share_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/com_facebook_button_icon"
            fab:fab_size="mini"
            fab:fab_label="@string/share_facebook" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_set_wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_terrain_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/set_wallpaper2"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_file_download_black_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/download"/>


    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>